<resources>
    <string name="app_name">Space Wallpaper</string>
    <!-- Main Fragment -->
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="download_button">Download Button</string>
    <string name="favorite_button">Save Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="favorites_list_button">Favorites List Button</string>
    <string name="download_completed">Space image saved to Pictures folder.</string>
    <string name="media_type_failed">Failed to rend media type.</string>

    <!-- Preference Titles -->
    <string name="scheduling_header">Scheduling</string>
    <string name="notifications_header">Notifications</string>
    <string name="about_header">About</string>

    <!-- Scheduling Preferences -->
    <string name="enable_title">Enable to change wallpaper</string>
    <string name="frequency_title">Frequency</string>
    <string name="time_title">Time</string>

    <!-- Notifications Preferences -->
    <string name="notifications_title">Confirm before apply</string>
    <string name="notifications_summary_on">At the scheduled time to change wallpaper, you are notified.
    </string>
    <string name="notifications_summary_off">Automatically set the new wallpaper at the scheduled time.
    </string>

    <!-- About Preferences -->
    <string name="version_title">Build version</string>
    <string name="version_summary">1.0-alpha</string>

    <!-- Foreground notification -->
    <string name="notification_channel_id">123456</string>
    <string name="notification_title">Update wallpaper?</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_confirm">Confirm</string>
    <string name="notification_channel_name">SpaceWallpaper</string>
    <string name="notification_channel_description">Update wallpaper to a space image</string>

    <!-- Test -->
    <string name="test_exception_message">Test Exception</string>
</resources>