<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/scheduling_header">

        <ListPreference
            app:defaultValue="every_day"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="frequency"
            app:title="@string/frequency_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time"
            app:title="@string/time_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--todo add on off toggle -->
    <PreferenceCategory app:title="@string/notifications_header">

<!--        todo change to time preference https://medium.com/nerd-for-tech/time-picker-and-custom-entries-in-preference-fragment-made-simple-1e0e125ff2ac-->
        <SwitchPreferenceCompat
            app:key="notify"
            app:summaryOff="@string/notifications_summary_off"
            app:summaryOn="@string/notifications_summary_on"
            app:title="@string/notifications_title" />

    </PreferenceCategory>

    <!-- todo add About of app, version etc -->
</PreferenceScreen>