<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rebeca.spacewallpaper.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mainMotionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_main_scene"
        tools:context=".main.MainFragment">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/selectedImage"
                pictureOfDay="@{viewModel.pictureOfDay.url}"
                pictureOfDayContentDescription="@{viewModel.pictureOfDay.title}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/luna" />

            <ImageView
                android:id="@+id/status_image"
                imageOfDayNASAApiStatus="@{viewModel.statusPictureOfDay}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/this_is_nasa_s_picture_of_day_showing_nothing_yet"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#00555555"
            android:contentDescription="@string/download_button"
            android:src="@drawable/ic_baseline_cloud_download_48"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />

        <ImageView
            android:id="@+id/animatedSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="#00555555"
            android:contentDescription="@string/favorite_button"
            android:src="@drawable/ic_baseline_favorite_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/saveButton" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="8dp"
            android:background="#00555555"
            android:contentDescription="@string/favorite_button"
            android:src="@drawable/ic_baseline_favorite_48"
            app:layout_constraintBottom_toTopOf="@+id/downloadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:contentDescription="@string/settings_button"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_48" />

        <ImageButton
            android:id="@+id/favorites_button"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:contentDescription="@string/favorites_list_button"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_view_list_48" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>